# coding_agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  FLOW.md  Makefile  README.md  agent_compact_system_prompt.txt  agent_implement_system_prompt.txt  agent_implement_user_prompt_template.txt  agent_plan_system_prompt.txt  agent_plan_user_prompt_template.txt  build_and_deploy.sh  docker-compose.yaml  event.json  example_issue_notification.json  example_pr_comment.json  example_pr_reviewed.json  example_tool.json  issue_comment_system_prompt.txt  main.py  pseudo_flow.py  pyproject.toml  system_prompt.txt  user_prompt_template.txt
data/: db_handler.py  open_router.py
flows/: agent_ask.py  agent_ask_system_prompt.txt  agent_implement.py  run_planning_compaction.py
handlers/: base_handler.py  issue_handler.py  planning_handler.py  pr_comment_handler.py  pr_review_handler.py
model/: base_db_model.py  channel_config.py  channel_message.py  comment.py  file.py  issue.py  issue_comment.py  label.py  message.py  model_info.py  pr_comment.py  pr_review.py  pull_request.py  pull_review.py  pull_review_comment.py  repository.py  review.py  webhook_message.py  workspace_config.py
tests/: file_tests.py
tools/: channel_config.py  checkout_branch.py  compact.py  create_file.py  delete_text.py  insert_after.py  list_branches.py  list_files.py  model_config.py  model_info.py  post_issue.py  read_file.py  replace_text.py  respond.py  search.py  tools.py  visit_site.py  web_search.py
utils/: commands.py  file.py  logger.py  messages.py  prompt.py  repo.py  search.py  (+4 more)
(+5 files in other folders)
