[project]
name = "coding-agent"
version = "0.1.0"
description = "Agent that takes tasks from an webhook and raises MRs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.4",
    "fastapi>=0.135.0",
    "gitpython>=3.1.46",
    "html-to-markdown>=2.28.2",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "ripgrepy>=2.2.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
